# InterfaceMaster

./: hue
devel/: .catkin  _setup_util.py  local_setup.sh
devel/include/asctec_hl_comm/: DoubleArrayStamped.h  GpsCustom.h  GpsCustomCartesian.h  MavCtrlSrv.h  MavCtrlSrvRequest.h  MavCtrlSrvResponse.h  MotorSpeed.h  PositionWithCovarianceStamped.h  WaypointAction.h  WaypointActionFeedback.h  WaypointActionGoal.h  WaypointActionResult.h  WaypointFeedback.h  WaypointGoal.h  WaypointResult.h  Wgs84ToEnu.h  Wgs84ToEnuRequest.h  Wgs84ToEnuResponse.h  mav_ctrl.h  mav_ctrl_motors.h  mav_ctrl_motorsRequest.h  mav_ctrl_motorsResponse.h  mav_ekf.h  mav_imu.h  mav_rcdata.h  mav_state.h  mav_status.h
devel/include/asctec_hl_interface/: HLInterfaceConfig.h  SSDKConfig.h
devel/include/dynamixel_workbench_msgs/: DynamixelCommandRequest.h  GetDynamixelInfoRequest.h
devel/include/msf_distort/: MSF_DistortConfig.h
devel/include/msf_updates/: PosePressureSensorConfig.h  PositionPoseSensorConfig.h  SinglePoseSensorConfig.h  SinglePositionSensorConfig.h  SphericalPositionSensorConfig.h
devel/include/rosauth/: AuthenticationRequest.h  AuthenticationResponse.h
devel/include/rosbridge_library/: TestNestedServiceRequest.h  TestNestedServiceResponse.h
devel/include/sensor_fusion_comm/: DoubleArrayStamped.h  DoubleMatrixStamped.h  ExtEkf.h  ExtState.h  InitHeightRequest.h  InitHeightResponse.h  InitScaleRequest.h  (+2 more)
devel/lib/: libglog.so.0.0.0
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
src/aruco_tracker/: CMakeLists.txt
src/aruco_tracker/launch/: master.launch
src/aruco_tracker/src/: IMU.cpp  IMU.hpp  camera_parameters.xml  copymethod.txt  copymethod1.txt  copymethodcopy.txt  driftplotter.py  interpolation.txt  main.cpp  main2.cpp  plotter.py  plotterxyz.py  publish.cpp  publish.hpp  resultscopy.txt  resultsinterpol.txt  tools.cpp  tools.hpp  tracksimple.cpp  tracksimple.hpp  xmotion.txt  ymotion.txt  zmotion.txt
(+310 files in other folders)
